# ssgw

./: LICENSE  LICENSE.matlab  README.md  pyproject.toml  ssgw.py
.github/workflows/: test.yml
tests/: test_ssgw.py
