[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssgw"
version = "0.1.0"
description = "Computation of irrotational 2D periodic surface pure gravity waves"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Milan Curcic", email = "mcurcic@miami.edu"},
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ssgw.py"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=ssgw --cov-report=term-missing"
testpaths = [
    "tests",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Repository = "https://github.com/wavesgroup/ssgw" 